--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,16 @@ description = "description"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "ichatbio-sdk",
+    "ichatbio-sdk~=0.2.1",
     "a2a-sdk[sqlite]",
-    "python-dotenv",
-    "openai",
-    "instructor",
-    "pydantic",
+    "python-dotenv~=0.9.9",
+    "openai~=1.79.0",
+    "instructor~=1.8.2",
+    "pydantic~=2.11.4",
     "requests",
     "sqlalchemy",
     "aiosqlite",
 ]
+
+[tool.pytest.ini_options]
+pythonpath = ["src", "tests"]
