--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "ichatbio-sdk~=0.2.1",
     "a2a-sdk[sqlite]",
-    "python-dotenv~=0.9.9,<2.0.0",
+    "python-dotenv>=0.9.9,<2.0.0",
     "openai~=1.79.0",
     "instructor~=1.8.2",
     "pydantic~=2.11.4",
